# django-custom-user

./: pyproject.toml
config/: settings.py  urls.py
custom_user/: admin.py  models.py  urls.py  views.py
custom_user/migrations/: 0001_initial.py
templates/: _base.html
templates/custom_user/: snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
