[tool.poetry]
name = "custom-user-model"
version = "0.1.0"
description = ""
authors = ["saadoundhirat <saadoundhirat93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
django-allauth = "^0.45.0"
django-crispy-forms = "^1.12.0"
django-debug-toolbar = "^3.2.2"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
